--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,6 @@
 services:
   - type: web
     name: nodejs-app
-    env: docker
-    buildCommand: npm run build
+    env: node
+    buildCommand: npm install && npm run build
     startCommand: npm start
-    envVars:
-      - key: NODE_ENV
-        value: production
-      - fromGroup: mysql
